2007-08-01  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.1.5

	* iTunesLibrary.m: added "Compilations" patch from Mark Wallis which
	  aggregates all albums which have different artists in this folder

	* {*}.lproj/Localizable.strings: added "Compilations"

	* AUTHORS: updated

	* NOTES: updated

	* English.lproj/MainMenu.nib: updated, but still invisible - we
	  probably could use a UI for setting formatters and the like, but
	  I'm still a bit undecided.

2007-07-08  Infinity  <me@infinite-labs.net>

	* {Italian,Spanish}.lproj/Localizable.strings: fixed Italian and
	  Spanish localizations.

2007-07-02  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.1.4

	* README: updated defaults section and added "Formatters" section

	* iTunesFSFormatter.[hm]: new formatter object - this is used
	  for formatting all track names for now. Includes ability to provide
	  format strings for number formatters.

	* iTunesTrack.[hm]: deprecated -prettyName, use -name now. Added
	  -extension (and, as a convenience, -ext), -trackNumber and
	  -playlistNumber for formatting purposes. Removed the
	  "DetailedTrackNames" default.

	* iTunesLibrary.m: added new "AlbumsTrackFormat" default for formatting
	  track names in "Albums" and "Songs".

	* iTunesPlaylist.m: added new "PlaylistsTrackFormat" default for
	  formatting track names in "Playlists".

	* FUSEOFS/*: added new FUSEOFS subproject. The idea here is to have
	  a reusable object model for other FUSEObjC based file systems.

	* iTunesFileSystem.[hm]: moved all lookup related stuff to new
	  superclass, FUSEObjectFileSystem.

	* iTunesLibrary.m, iPodLibrary.m, iTunesPlaylist.m, iTunesTrack.m:
	  changed all references of "iTunesFS" to "FUSEOFS".

	* NSArray+Extensions.[hm]: removed obsolete category

	* NSObject+Extensions.[hm]: removed, part of FUSEOFS now.

	* GNUmakefile{,.preamble}: added FUSEOFS

2007-06-14  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v1.1.3
